--- a/styles/summer.css
+++ b/styles/summer.css
@@ -129,14 +129,16 @@ body {
 .dropdown-item .icon {
     color: var(--background-accent);
 }
-/* 
-.rank h2 span,
-.rank h3,
-.rank .icon,
-.rank p,
-.rank table {
-    color: white;
-} */
+
+.recipe {
+    background: var(--gradient-secondary);
+    padding: 1.2em;
+}
+
+.recipe figcaption {
+    font-weight: 500;
+    text-align: justify;
+}
 
 @media screen and (max-width: 900px) {
     .home-grid > div,
